--- a/font-end/src/styles.scss
+++ b/font-end/src/styles.scss
@@ -1,1 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
+
+
+/* Importing Bootstrap SCSS file. */
+@import '~bootstrap/scss/bootstrap';
+
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.form-group.required:after, .form-label.required:after {
+  content:"*";
+  color:red;
+}
