--- a/font-end/src/app/auth/auth.component.html
+++ b/font-end/src/app/auth/auth.component.html
@@ -18,7 +18,7 @@
 
         <div class="col-md-12">
           <label for="password" class="form-label required"><b>Password:</b></label>
-          <input type="text"
+          <input type="password"
                  id="password"
                  name="password"
                  required
