--- a/font-end/src/app/keyword/keyword.component.html
+++ b/font-end/src/app/keyword/keyword.component.html
@@ -8,6 +8,9 @@
           <li>
             <button type="button" class="btn btn-primary" (click)="uploadForm()">Upload (.csv)</button>
           </li>
+          <li>
+            <button type="button" class="btn btn-primary ml-2" (click)="search(strKeyword)">Refresh</button>
+          </li>
         </ul>
         <form class="form-inline my-2 my-lg-0" (submit)="search(strKeyword)" novalidate>
           <input name="search-keyword" class="form-control mr-sm-2" type="search" placeholder="Search keyword" [(ngModel)]="strKeyword">
