set MaxSize pagination control

--- a/font-end/src/app/keyword/keyword.component.html
+++ b/font-end/src/app/keyword/keyword.component.html
@@ -58,6 +58,7 @@
       class="d-flex justify-content-end"
       (pageChange)="pageChange($event)"
       [rotate]="true"
+      [maxSize]="5"
       [pageSize]="pageSize"
       [collectionSize]="collectionSize"
       [(page)]="page">
