--- a/font-end/src/app/shared/layouts/main-layout.component.html
+++ b/font-end/src/app/shared/layouts/main-layout.component.html
@@ -315,9 +315,10 @@
   <section>
     <nav>
       <ul>
-        <li><a class="active" href="#">Keyword</a></li>
-        <li><a [routerLink]="'/register'">Register</a></li>
-        <li><a [routerLink]="'/profile'">Profile</a></li>
+        <li><a [class]="active == 'keyword' ? 'active' : ''" [routerLink]="'keyword'">Keyword</a></li>
+        <li><a [class]="active == 'register' ? 'active' : ''" [routerLink]="'register'">Register</a></li>
+        <li><a [class]="active == 'profile' ? 'active' : ''" [routerLink]="'profile'">Profile</a></li>
+        <li (click)="logout()"><a>Logout</a></li>
       </ul>
     </nav>
 
