--- a/font-end/src/app/app.component.html
+++ b/font-end/src/app/app.component.html
@@ -7,5 +7,6 @@
 <!-- * * * * * * * to get started with your project! * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
-
+<ng-progress [spinner]="false" [thick]="true"></ng-progress>
 <router-outlet></router-outlet>
+
