--- a/font-end/src/app/shared/layouts/main-layout.component.html
+++ b/font-end/src/app/shared/layouts/main-layout.component.html
@@ -306,7 +306,7 @@
       </a>
       <span></span>
       <div class="spacer"></div>
-      <a aria-label="Logout" href="#" title="Logout">
+      <a aria-label="Logout" [routerLink]="'profile'" title="Logout">
         <img src="../../../assets/man.png" width="40" height="40">
       </a>
     </div>
