--- a/front-end/src/app/keyword/keyword.component.html
+++ b/front-end/src/app/keyword/keyword.component.html
@@ -6,10 +6,10 @@
       <div class="collapse navbar-collapse">
         <ul class="navbar-nav mr-auto">
           <li>
-            <button type="button" class="btn btn-primary" (click)="uploadForm()">Upload (.csv)</button>
+            <button type="button" name="upload" class="btn btn-primary" (click)="uploadForm()">Upload (.csv)</button>
           </li>
           <li>
-            <button type="button" class="btn btn-primary ml-2" (click)="search(strKeyword)">Refresh</button>
+            <button type="button" name="refresh" class="btn btn-primary ml-2" (click)="search(strKeyword)">Refresh</button>
           </li>
         </ul>
         <form class="form-inline my-2 my-lg-0" (submit)="search(strKeyword)" novalidate>
