--- a/front-end/src/app/keyword/upload/keyword.upload.component.html
+++ b/front-end/src/app/keyword/upload/keyword.upload.component.html
@@ -12,7 +12,11 @@
     </div>
   </div>
   <div class="modal-footer">
-    <button type="button" class="btn btn-primary" (click)="import()">Import</button>
-    <button type="button" class="btn btn-danger" (click)="activeModal.close('Close click')">Close</button>
+    <button type="button" class="btn btn-primary" (click)="import()">
+      <i class="fa fa-cloud-upload" aria-hidden="true"></i> Import
+    </button>
+    <button type="button" class="btn btn-danger" (click)="activeModal.close('Close click')">
+      <i class="fa fa-times" aria-hidden="true"></i> Close
+    </button>
   </div>
 </div>
