--- a/front-end/src/app/register/register.component.html
+++ b/front-end/src/app/register/register.component.html
@@ -41,7 +41,9 @@
            [(ngModel)]="model.rpassword"
            required>
     <hr>
-    <button type="submit" class="registerbtn" (click)="onSubmit()">Register</button>
+    <button type="submit" class="registerbtn" (click)="onSubmit()">
+      <i class="fa fa-registered" aria-hidden="true"></i> Register
+    </button>
   </div>
 
   <div class="container signin">
