--- a/front-end/src/app/auth/auth.component.html
+++ b/front-end/src/app/auth/auth.component.html
@@ -28,8 +28,12 @@
       </div>
 
       <div class="clearfix">
-        <button type="button" class="signupbtn" [routerLink]="'/register'">Sign Up</button>
-        <button type="submit" class="signinbtn" (click)="onSubmit()">Sign In</button>
+        <button type="button" class="signupbtn" [routerLink]="'/register'">
+          <i class="fa fa-address-card" aria-hidden="true"></i> Sign Up
+        </button>
+        <button type="submit" class="signinbtn" (click)="onSubmit()">
+          <i class="fa fa-sign-in" aria-hidden="true"></i> Sign In
+        </button>
       </div>
     </div>
 
