Update text label

--- a/front-end/src/app/auth/profile/profile.component.html
+++ b/front-end/src/app/auth/profile/profile.component.html
@@ -3,7 +3,7 @@
 
   <form>
     <div class="form-group">
-      <label>FullName</label>
+      <label>Name</label>
       <input type="text"
              class="form-control"
              [(ngModel)]="model.fullName"
