#5 Code organization improvements - Rename images

--- a/front-end/src/app/auth/auth.component.html
+++ b/front-end/src/app/auth/auth.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <form class="login-page animate modal-content" novalidate [formGroup]="form">
     <div class="imgcontainer">
-      <img src="../../assets/img_avatar2.png" alt="Avatar" class="avatar">
+      <img src="../../assets/login_avatar.png" alt="Avatar" class="avatar">
     </div>
 
     <div class="container">
