--- a/front-end/src/app/shared/layouts/main-layout.component.html
+++ b/front-end/src/app/shared/layouts/main-layout.component.html
@@ -307,7 +307,7 @@
       <span></span>
       <div class="spacer"></div>
       <a aria-label="Logout" [routerLink]="'profile'" title="Logout">
-        <img src="../../../assets/man.png" width="40" height="40">
+        <img src="../../../assets/user_avatar.png" width="40" height="40">
       </a>
     </div>
   </header>
